--- a/index.html
+++ b/index.html
@@ -35,7 +35,7 @@
 
 <ul>
 <li>E-mail: suda DOT kyoto AT gmail DOT com</li>
-<li>Corporation E-mail: suda DOT akihiro AT lab DOT ntt DOT co DOT jp</li>
+<li>Corporation E-mail: akihiro DOT suda DOT cz AT hco DOT ntt DOT co DOT jp</li>
 </ul>
         </section>
 
