--- a/index.html
+++ b/index.html
@@ -37,6 +37,9 @@
 <li>E-mail: suda DOT kyoto AT gmail DOT com</li>
 <li>Corporation E-mail: akihiro DOT suda DOT cz AT hco DOT ntt DOT co DOT jp</li>
 </ul>
+<h3>
+<a id="gpg" class="anchor" href="#gpg" aria-hidden="true"><span aria-hidden="true" class="octicon octicon-link"></span></a>GPG Key</h3>
+<a href="https://github.com/AkihiroSuda.gpg">https://github.com/AkihiroSuda.gpg</a>
         </section>
 
         <aside id="sidebar">
